--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body onload="init()">
+
+    <h1>Tic Tac Toe</h1>
+
+    <div id="content"></div>
 
     <script src="script.js"></script>
 </body>
